--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -48,8 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,9 +170,9 @@
      "output_type": "stream",
      "text": [
       "Testing affine_backward function:\n",
-      "dx error:  2.53272424268e-10\n",
-      "dw error:  5.62580796678e-11\n",
-      "db error:  1.32808586766e-11\n"
+      "dx error:  2.58538322742e-08\n",
+      "dw error:  8.45389768315e-11\n",
+      "db error:  5.86973776472e-11\n"
      ]
     }
    ],
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "dx error:  3.27561699017e-12\n"
+      "dx error:  3.27562060225e-12\n"
      ]
     }
    ],
@@ -281,11 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward:\n",
+      "dx error:  6.28138181346e-11\n",
+      "dw error:  6.68248093787e-11\n",
+      "db error:  7.82662846583e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "\n",
@@ -319,11 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss:  8.99855826869\n",
+      "dx error:  3.0387355051e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.30244139476\n",
+      "dx error:  7.92358407282e-09\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes, num_inputs = 10, 50\n",
     "x = 0.001 * np.random.randn(num_inputs, num_classes)\n",
@@ -358,11 +381,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 1.83e-08\n",
+      "W2 relative error: 3.20e-10\n",
+      "b1 relative error: 9.83e-09\n",
+      "b2 relative error: 4.33e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 2.53e-07\n",
+      "W2 relative error: 7.98e-08\n",
+      "b1 relative error: 1.35e-08\n",
+      "b2 relative error: 7.76e-10\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H, C = 3, 5, 50, 7\n",
     "X = np.random.randn(N, D)\n",
@@ -376,10 +417,10 @@
     "b1 = model.params['b1']\n",
     "W2_std = abs(model.params['W2'].std() - std)\n",
     "b2 = model.params['b2']\n",
-    "assert(W1_std < std / 10, 'First layer weights do not seem right')\n",
-    "assert(np.all(b1 == 0), 'First layer biases do not seem right')\n",
-    "assert(W2_std < std / 10, 'Second layer weights do not seem right')\n",
-    "assert(np.all(b2 == 0), 'Second layer biases do not seem right')\n",
+    "assert(W1_std < (std / 10)), 'First layer weights do not seem right'\n",
+    "assert(np.all(b1 == 0)), 'First layer biases do not seem right'\n",
+    "assert(W2_std < (std / 10)), 'Second layer weights do not seem right'\n",
+    "assert(np.all(b2 == 0)), 'Second layer biases do not seem right'\n",
     "\n",
     "print('Testing test-time forward pass ... ')\n",
     "model.params['W1'] = np.linspace(-0.7, 0.3, num=D*H).reshape(D, H)\n",
@@ -393,18 +434,18 @@
     "   [12.05769098,  12.74614105,  13.43459113,  14.1230412,   14.81149128, 15.49994135,  16.18839143],\n",
     "   [12.58373087,  13.20054771,  13.81736455,  14.43418138,  15.05099822, 15.66781506,  16.2846319 ]])\n",
     "scores_diff = np.abs(scores - correct_scores).sum()\n",
-    "assert(scores_diff < 1e-6, 'Problem with test-time forward pass')\n",
+    "assert(scores_diff < 1e-6), 'Problem with test-time forward pass'\n",
     "\n",
     "print('Testing training loss (no regularization)')\n",
     "y = np.asarray([0, 5, 1])\n",
     "loss, grads = model.loss(X, y)\n",
     "correct_loss = 3.4702243556\n",
-    "assert(abs(loss - correct_loss) < 1e-10, 'Problem with training-time loss')\n",
+    "assert(abs(loss - correct_loss) < 1e-10), 'Problem with training-time loss'\n",
     "\n",
     "model.reg = 1.0\n",
     "loss, grads = model.loss(X, y)\n",
     "correct_loss = 26.5948426952\n",
-    "assert(abs(loss - correct_loss) < 1e-10, 'Problem with regularization loss')\n",
+    "assert(abs(loss - correct_loss) < 1e-10), 'Problem with regularization loss'\n",
     "\n",
     "for reg in [0.0, 0.7]:\n",
     "  print('Running numeric gradient check with reg = ', reg)\n",
@@ -414,7 +455,7 @@
     "  for name in sorted(grads):\n",
     "    f = lambda _: model.loss(X, y)[0]\n",
     "    grad_num = eval_numerical_gradient(f, model.params[name], verbose=False)\n",
-    "    print('%s relative error: %.2e' % (name, rel_error(grad_num, grads[name]))"
+    "    print('%s relative error: %.2e' % (name, rel_error(grad_num, grads[name])))"
    ]
   },
   {
@@ -429,20 +470,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 11460) loss: 2.304648\n",
+      "(Epoch 0 / 30) train acc: 0.107000; val_acc: 0.095000\n",
+      "(Epoch 1 / 30) train acc: 0.288000; val_acc: 0.280000\n",
+      "(Epoch 2 / 30) train acc: 0.338000; val_acc: 0.348000\n",
+      "(Iteration 1001 / 11460) loss: 1.595569\n",
+      "(Epoch 3 / 30) train acc: 0.361000; val_acc: 0.379000\n",
+      "(Epoch 4 / 30) train acc: 0.392000; val_acc: 0.414000\n",
+      "(Epoch 5 / 30) train acc: 0.449000; val_acc: 0.432000\n",
+      "(Iteration 2001 / 11460) loss: 1.640295\n",
+      "(Epoch 6 / 30) train acc: 0.450000; val_acc: 0.447000\n",
+      "(Epoch 7 / 30) train acc: 0.425000; val_acc: 0.453000\n",
+      "(Iteration 3001 / 11460) loss: 1.538954\n",
+      "(Epoch 8 / 30) train acc: 0.466000; val_acc: 0.452000\n",
+      "(Epoch 9 / 30) train acc: 0.458000; val_acc: 0.459000\n",
+      "(Epoch 10 / 30) train acc: 0.466000; val_acc: 0.454000\n",
+      "(Iteration 4001 / 11460) loss: 1.539044\n",
+      "(Epoch 11 / 30) train acc: 0.472000; val_acc: 0.456000\n",
+      "(Epoch 12 / 30) train acc: 0.487000; val_acc: 0.464000\n",
+      "(Epoch 13 / 30) train acc: 0.481000; val_acc: 0.467000\n",
+      "(Iteration 5001 / 11460) loss: 1.667988\n",
+      "(Epoch 14 / 30) train acc: 0.503000; val_acc: 0.474000\n",
+      "(Epoch 15 / 30) train acc: 0.519000; val_acc: 0.483000\n",
+      "(Iteration 6001 / 11460) loss: 1.370949\n",
+      "(Epoch 16 / 30) train acc: 0.504000; val_acc: 0.481000\n",
+      "(Epoch 17 / 30) train acc: 0.529000; val_acc: 0.478000\n",
+      "(Epoch 18 / 30) train acc: 0.495000; val_acc: 0.481000\n",
+      "(Iteration 7001 / 11460) loss: 1.348732\n",
+      "(Epoch 19 / 30) train acc: 0.505000; val_acc: 0.491000\n",
+      "(Epoch 20 / 30) train acc: 0.529000; val_acc: 0.490000\n",
+      "(Iteration 8001 / 11460) loss: 1.343384\n",
+      "(Epoch 21 / 30) train acc: 0.510000; val_acc: 0.502000\n",
+      "(Epoch 22 / 30) train acc: 0.499000; val_acc: 0.506000\n",
+      "(Epoch 23 / 30) train acc: 0.551000; val_acc: 0.508000\n",
+      "(Iteration 9001 / 11460) loss: 1.363529\n",
+      "(Epoch 24 / 30) train acc: 0.553000; val_acc: 0.504000\n",
+      "(Epoch 25 / 30) train acc: 0.549000; val_acc: 0.510000\n",
+      "(Epoch 26 / 30) train acc: 0.550000; val_acc: 0.516000\n",
+      "(Iteration 10001 / 11460) loss: 1.398059\n",
+      "(Epoch 27 / 30) train acc: 0.526000; val_acc: 0.515000\n",
+      "(Epoch 28 / 30) train acc: 0.542000; val_acc: 0.518000\n",
+      "(Iteration 11001 / 11460) loss: 1.452553\n",
+      "(Epoch 29 / 30) train acc: 0.563000; val_acc: 0.510000\n",
+      "(Epoch 30 / 30) train acc: 0.558000; val_acc: 0.509000\n"
+     ]
+    }
+   ],
    "source": [
     "model = TwoLayerNet()\n",
-    "solver = None\n",
+    "solver = Solver(model, data, \n",
+    "                optim_config={'learning_rate': 1e-4},\n",
+    "                batch_size=128, num_epochs=30, \n",
+    "                lr_decay=.985, print_every=1000)\n",
     "\n",
     "##############################################################################\n",
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "pass\n",
+    "solver.train()\n",
+    "acc = solver.check_accuracy(data.get('X_test'), data.get('y_test'), batch_size=128)\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
