batch norm stuff

--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -850,6 +850,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.001)\n",
     "\n",
     "solver = Solver(model, data,\n",
@@ -1097,6 +1098,87 @@
     "You should use the space below to experiment and train your network. The final cell in this notebook should contain the training, validation, and test set accuracies for your final trained network. In this notebook you should also write an explanation of what you did, any additional features that you implemented, and any visualizations or graphs that you make in the process of training and evaluating your network.\n",
     "\n",
     "Have fun and happy training!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 980) loss: 2.304637\n",
+      "(Epoch 0 / 1) train acc: 0.107000; val_acc: 0.105000\n",
+      "(Iteration 21 / 980) loss: 2.113731\n",
+      "(Iteration 41 / 980) loss: 1.803990\n",
+      "(Iteration 61 / 980) loss: 1.702806\n",
+      "(Iteration 81 / 980) loss: 1.771623\n",
+      "(Iteration 101 / 980) loss: 1.932715\n",
+      "(Iteration 121 / 980) loss: 1.791136\n",
+      "(Iteration 141 / 980) loss: 1.783706\n",
+      "(Iteration 161 / 980) loss: 1.845626\n",
+      "(Iteration 181 / 980) loss: 1.781831\n",
+      "(Iteration 201 / 980) loss: 1.822794\n",
+      "(Iteration 221 / 980) loss: 1.860580\n",
+      "(Iteration 241 / 980) loss: 1.706795\n",
+      "(Iteration 261 / 980) loss: 1.610241\n",
+      "(Iteration 281 / 980) loss: 2.326953\n",
+      "(Iteration 301 / 980) loss: 1.854716\n",
+      "(Iteration 321 / 980) loss: 1.645866\n",
+      "(Iteration 341 / 980) loss: 1.878075\n",
+      "(Iteration 361 / 980) loss: 1.693856\n",
+      "(Iteration 381 / 980) loss: 1.960267\n",
+      "(Iteration 401 / 980) loss: 1.680989\n",
+      "(Iteration 421 / 980) loss: 1.591577\n",
+      "(Iteration 441 / 980) loss: 1.531600\n",
+      "(Iteration 461 / 980) loss: 1.394708\n",
+      "(Iteration 481 / 980) loss: 1.558128\n",
+      "(Iteration 501 / 980) loss: 1.923394\n",
+      "(Iteration 521 / 980) loss: 1.821986\n",
+      "(Iteration 541 / 980) loss: 1.710983\n",
+      "(Iteration 561 / 980) loss: 1.293433\n",
+      "(Iteration 581 / 980) loss: 1.779605\n",
+      "(Iteration 601 / 980) loss: 1.451550\n",
+      "(Iteration 621 / 980) loss: 1.680965\n",
+      "(Iteration 641 / 980) loss: 2.011721\n",
+      "(Iteration 661 / 980) loss: 1.405930\n",
+      "(Iteration 681 / 980) loss: 1.559748\n",
+      "(Iteration 701 / 980) loss: 1.394824\n",
+      "(Iteration 721 / 980) loss: 2.006499\n",
+      "(Iteration 741 / 980) loss: 1.732398\n",
+      "(Iteration 761 / 980) loss: 1.501675\n",
+      "(Iteration 781 / 980) loss: 1.635139\n",
+      "(Iteration 801 / 980) loss: 1.844561\n",
+      "(Iteration 821 / 980) loss: 1.607999\n",
+      "(Iteration 841 / 980) loss: 1.407418\n",
+      "(Iteration 861 / 980) loss: 1.894988\n",
+      "(Iteration 881 / 980) loss: 1.471260\n",
+      "(Iteration 901 / 980) loss: 1.577614\n",
+      "(Iteration 921 / 980) loss: 1.656344\n",
+      "(Iteration 941 / 980) loss: 1.313686\n",
+      "(Iteration 961 / 980) loss: 1.693050\n",
+      "(Epoch 1 / 1) train acc: 0.467000; val_acc: 0.487000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Experiments\n",
+    "\n",
+    "%%time\n",
+    "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.001)\n",
+    "\n",
+    "solver = Solver(model, data,\n",
+    "                num_epochs=1, batch_size=50,\n",
+    "                update_rule='adam',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': 1e-3,\n",
+    "                },\n",
+    "                verbose=True, print_every=20)\n",
+    "solver.train()"
    ]
   },
   {
