--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -12,11 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "\n",
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -930,16 +937,16 @@
      "text": [
       "Before spatial batch normalization:\n",
       "  Shape:  (2, 3, 4, 5)\n",
-      "  Means:  [  9.13361456   9.48144743  11.31427931]\n",
-      "  Stds:  [ 3.62142456  3.63858209  3.82516662]\n",
+      "  Means:  [ 9.7418191   9.79878896  8.56913547]\n",
+      "  Stds:  [ 3.11088418  4.23727654  4.26766914]\n",
       "After spatial batch normalization:\n",
       "  Shape:  (2, 3, 4, 5)\n",
-      "  Means:  [ -1.44328993e-16   2.99760217e-16   1.22124533e-16]\n",
-      "  Stds:  [ 0.98742088  0.98742088  0.98742088]\n",
+      "  Means:  [  1.77635684e-16   2.99760217e-16   0.00000000e+00]\n",
+      "  Stds:  [ 0.99999948  0.99999972  0.99999973]\n",
       "After spatial batch normalization (nontrivial gamma, beta):\n",
       "  Shape:  (2, 3, 4, 5)\n",
       "  Means:  [ 6.  7.  8.]\n",
-      "  Stds:  [ 2.96226265  3.94968353  4.93710441]\n"
+      "  Stds:  [ 2.99999845  3.99999889  4.99999863]\n"
      ]
     }
    ],
@@ -975,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -983,8 +990,8 @@
      "output_type": "stream",
      "text": [
       "After spatial batch normalization (test-time):\n",
-      "  means:  [-0.01316922 -0.0389843   0.03159817  0.02568468]\n",
-      "  stds:  [ 0.97236811  0.99900814  0.98367348  0.98329204]\n"
+      "  means:  [ 0.04876127  0.0374726   0.08349499  0.02240671]\n",
+      "  stds:  [ 1.00661265  1.02907713  1.00866179  1.02585163]\n"
      ]
     }
    ],
@@ -1023,16 +1030,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dx error:  3.03683606408e-08\n",
-      "dgamma error:  4.52751363949e-12\n",
-      "dbeta error:  3.2753938996e-12\n"
+      "dx error:  1.24326608302e-07\n",
+      "dgamma error:  4.33206116663e-12\n",
+      "dbeta error:  3.27553321519e-12\n"
      ]
     }
    ],
@@ -1102,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -1111,68 +1118,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 980) loss: 2.304637\n",
-      "(Epoch 0 / 1) train acc: 0.107000; val_acc: 0.105000\n",
-      "(Iteration 21 / 980) loss: 2.113731\n",
-      "(Iteration 41 / 980) loss: 1.803990\n",
-      "(Iteration 61 / 980) loss: 1.702806\n",
-      "(Iteration 81 / 980) loss: 1.771623\n",
-      "(Iteration 101 / 980) loss: 1.932715\n",
-      "(Iteration 121 / 980) loss: 1.791136\n",
-      "(Iteration 141 / 980) loss: 1.783706\n",
-      "(Iteration 161 / 980) loss: 1.845626\n",
-      "(Iteration 181 / 980) loss: 1.781831\n",
-      "(Iteration 201 / 980) loss: 1.822794\n",
-      "(Iteration 221 / 980) loss: 1.860580\n",
-      "(Iteration 241 / 980) loss: 1.706795\n",
-      "(Iteration 261 / 980) loss: 1.610241\n",
-      "(Iteration 281 / 980) loss: 2.326953\n",
-      "(Iteration 301 / 980) loss: 1.854716\n",
-      "(Iteration 321 / 980) loss: 1.645866\n",
-      "(Iteration 341 / 980) loss: 1.878075\n",
-      "(Iteration 361 / 980) loss: 1.693856\n",
-      "(Iteration 381 / 980) loss: 1.960267\n",
-      "(Iteration 401 / 980) loss: 1.680989\n",
-      "(Iteration 421 / 980) loss: 1.591577\n",
-      "(Iteration 441 / 980) loss: 1.531600\n",
-      "(Iteration 461 / 980) loss: 1.394708\n",
-      "(Iteration 481 / 980) loss: 1.558128\n",
-      "(Iteration 501 / 980) loss: 1.923394\n",
-      "(Iteration 521 / 980) loss: 1.821986\n",
-      "(Iteration 541 / 980) loss: 1.710983\n",
-      "(Iteration 561 / 980) loss: 1.293433\n",
-      "(Iteration 581 / 980) loss: 1.779605\n",
-      "(Iteration 601 / 980) loss: 1.451550\n",
-      "(Iteration 621 / 980) loss: 1.680965\n",
-      "(Iteration 641 / 980) loss: 2.011721\n",
-      "(Iteration 661 / 980) loss: 1.405930\n",
-      "(Iteration 681 / 980) loss: 1.559748\n",
-      "(Iteration 701 / 980) loss: 1.394824\n",
-      "(Iteration 721 / 980) loss: 2.006499\n",
-      "(Iteration 741 / 980) loss: 1.732398\n",
-      "(Iteration 761 / 980) loss: 1.501675\n",
-      "(Iteration 781 / 980) loss: 1.635139\n",
-      "(Iteration 801 / 980) loss: 1.844561\n",
-      "(Iteration 821 / 980) loss: 1.607999\n",
-      "(Iteration 841 / 980) loss: 1.407418\n",
-      "(Iteration 861 / 980) loss: 1.894988\n",
-      "(Iteration 881 / 980) loss: 1.471260\n",
-      "(Iteration 901 / 980) loss: 1.577614\n",
-      "(Iteration 921 / 980) loss: 1.656344\n",
-      "(Iteration 941 / 980) loss: 1.313686\n",
-      "(Iteration 961 / 980) loss: 1.693050\n",
-      "(Epoch 1 / 1) train acc: 0.467000; val_acc: 0.487000\n"
+      "(Iteration 1 / 382) loss: 2.306598\n",
+      "(Epoch 0 / 1) train acc: 0.108000; val_acc: 0.121000\n",
+      "(Iteration 21 / 382) loss: 2.052575\n",
+      "(Iteration 41 / 382) loss: 1.938495\n",
+      "(Iteration 61 / 382) loss: 1.609657\n",
+      "(Iteration 81 / 382) loss: 1.691465\n",
+      "(Iteration 101 / 382) loss: 1.629288\n",
+      "(Iteration 121 / 382) loss: 1.555606\n",
+      "(Iteration 141 / 382) loss: 1.686371\n",
+      "(Iteration 161 / 382) loss: 1.611514\n",
+      "(Iteration 181 / 382) loss: 1.720409\n",
+      "(Iteration 201 / 382) loss: 1.451851\n",
+      "(Iteration 221 / 382) loss: 1.406349\n",
+      "(Iteration 241 / 382) loss: 1.546653\n",
+      "(Iteration 261 / 382) loss: 1.439788\n",
+      "(Iteration 281 / 382) loss: 1.529618\n",
+      "(Iteration 301 / 382) loss: 1.388459\n",
+      "(Iteration 321 / 382) loss: 1.214591\n",
+      "(Iteration 341 / 382) loss: 1.382384\n",
+      "(Iteration 361 / 382) loss: 1.319093\n",
+      "(Iteration 381 / 382) loss: 1.537418\n",
+      "(Epoch 1 / 1) train acc: 0.580000; val_acc: 0.557000\n",
+      "CPU times: user 38min 18s, sys: 1min 37s, total: 39min 55s\n",
+      "Wall time: 5min 12s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# Experiments\n",
     "\n",
-    "%%time\n",
-    "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.001)\n",
+    "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.001, batchNorm=True,\n",
+    "                          filter_size=3, num_filters=64)\n",
     "\n",
     "solver = Solver(model, data,\n",
-    "                num_epochs=1, batch_size=50,\n",
+    "                num_epochs=1, batch_size=128,\n",
     "                update_rule='adam',\n",
     "                optim_config={\n",
     "                  'learning_rate': 1e-3,\n",
@@ -1217,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
