--- a/assignment3/RNN_Captioning.ipynb
+++ b/assignment3/RNN_Captioning.ipynb
@@ -10,8 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -326,18 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dx error:  1.0\n",
-      "dh0 error:  1.0\n",
-      "dWx error:  1.0\n",
-      "dWh error:  1.0\n",
-      "db error:  1.0\n"
+      "dx error:  2.1237548287e-07\n",
+      "dh0 error:  2.4879310639e-09\n",
+      "dWx error:  3.04154812397e-10\n",
+      "dWh error:  5.5612685174e-09\n",
+      "db error:  7.28295955041e-11\n"
      ]
     }
    ],
@@ -387,11 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out error:  1.00000000947e-08\n"
+     ]
+    }
+   ],
    "source": [
     "N, T, V, D = 2, 4, 5, 3\n",
     "\n",
@@ -422,11 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dW error:  3.27588338498e-12\n"
+     ]
+    }
+   ],
    "source": [
     "N, T, V, D = 50, 3, 5, 6\n",
     "\n",
@@ -453,11 +467,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.2811796468e-10\n",
+      "dw error:  2.95853787807e-11\n",
+      "db error:  7.58698514122e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient check for temporal affine layer\n",
     "N, T, D, M = 2, 3, 4, 5\n",
@@ -501,11 +523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.30243664519\n",
+      "23.0261143487\n",
+      "2.26344243687\n",
+      "dx error:  6.21506267072e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Sanity check for temporal softmax loss\n",
     "from cs231n.rnn_layers import temporal_softmax_loss\n",
@@ -548,12 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss:  9.83235591003\n",
+      "expected loss:  9.83235591003\n",
+      "difference:  2.61124455392e-12\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, W, H = 10, 20, 30, 40\n",
     "word_to_idx = {'<NULL>': 0, 'cat': 2, 'dog': 3}\n",
